[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
task-core = { path = "../task-core" }
web-sys = "0.3.66"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.39"
